added noscript tag

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 </head>
 <body>
+  <noscript>Du musst Javascript aktivieren, um hier weiterzukommen.</noscript>
   <app-root></app-root>
 </body>
 </html>
